tile gradient background letter spacing on all elements on page fixed spelling error on seconds background gradient image on list page button font to neautraface display on list page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,6 +2,7 @@ body {
     padding: 0px;
     margin: 0px;
     font-family: "NeutrafaceDisplay",sans-serif;
+    letter-spacing: 0.05em;
     background-color: #150f17;
 }
 
@@ -150,6 +151,7 @@ body {
     margin: 104px auto 28px auto;
     font-size: 15px;
     font-weight: 500;
+    letter-spacing: 0.05em;
     text-align: center;
     color: #929292;
 }
@@ -197,6 +199,10 @@ body {
     height: 47px;
     padding: 0px auto;
     margin: 0px auto;
+    font-family: "NeutrafaceDisplay",sans-serif;
+    font-weight: 500;
+    letter-spacing: 0.05em;
+    line-height: 15px;
     font-size: 15px;
     text-align: center;
     font-weight: 500;
@@ -244,11 +250,14 @@ body {
     height: 230px;
     padding: 20px;
     margin: 0px;
-    background: #29253b; /* For browsers that do not support gradients */
-    background: -webkit-linear-gradient(180deg, #29253b, #28212b); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(180deg, #29253b, #28212b); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(180deg, #29253b, #28212b); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(180deg, #29253b, #28212b); /* Standard syntax */
+    background: #29253b;
+    background-image: url('../img/tilegradientbackground.png');
+    /*
+    background: -webkit-linear-gradient(180deg, #29253b, #28212b);
+    background: -o-linear-gradient(180deg, #29253b, #28212b);
+    background: -moz-linear-gradient(180deg, #29253b, #28212b);
+    background: linear-gradient(180deg, #29253b, #28212b);
+    */
 }
 .preview-title {
     float: left;
@@ -274,6 +283,16 @@ body {
     font-weight: 600;
     color: #2f66d5;
     cursor: pointer;
+}
+#list-background {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100vh;
+    background-image: url('../img/gradientbackground.png');
+    background-size: 100%;
+    z-index: -1;
 }
 
 /********/
